--- a/ES6/13.promise.md
+++ b/ES6/13.promise.md
@@ -1,6 +1,6 @@
 promise
 ===================
-Promise，简单说就是一个容器，里面保存着某个未来才会结束的事件（通常是一个异步操作）的结果。Promise 是异步编程的一种解决方案，比回调函数和事件更合理更强大。使用Promise对象，就可以将异步操作以同步操作的流程表达出来，避免了层层嵌套的回调函数。
+Promise对象，可以将异步操作以同步操作的流程表达出来，避免了层层嵌套的回调函数。
 ###用法
 ```
 const promise = new Promise(function(resolve, reject) {
