--- a/ES6/16.module.md
+++ b/ES6/16.module.md
@@ -22,9 +22,9 @@ export命令除了输出变量，还可以输出函数或类（class）。
 使用export命令定义了模块的对外接口以后，其他 JS 文件就可以通过import命令加载这个模块。
 
 ```
-import { firstName, lastName, year } from './file.js';
+import { firstName, lastName } from './file.js';
 ```
-import命令接受一对大括号，里面指定要从其他模块导入的变量名。from指定模块文件的位置，可以是相对路径，也可以是绝对路径，.js后缀可以省略。import命令具有提升效果，会提升到整个模块的头部，首先执行，但最好放在文件顶部。
+import命令接受一对大括号，里面指定要从其他模块导入的变量名。from指定模块文件的位置，可以是相对路径，也可以是绝对路径。import命令具有提升效果，会提升到整个模块的头部，首先执行，但最好放在文件顶部。
 
 import命令输入的变量都是只读的，但是，如果变量为一个对象，改写它的属性是允许的，并且其他模块也可以读到改写后的值。不过，这种写法很难查错，所以凡是输入的变量，都当作完全只读，不要改变它的属性。
 
