--- a/JS/19.面向对象.md
+++ b/JS/19.面向对象.md
@@ -1,6 +1,6 @@
 面向对象
 ===================
-是指不需要了解对象的内部结构，就可以进行使用，因此，只需要了解对象的属性与方法，就可以创建对象进行使用。例如可以直接使用Date对象来获取或设置时间，不需要知道为什么Date对象能实现这个功能。
+是指不需要了解对象的内部结构，就可以进行使用，只需要了解对象的属性与方法，就可以创建对象进行使用。例如可以直接使用Date对象来获取或设置时间，不需要知道为什么Date对象能实现这个功能。
 js对象指的是属性的集合，每个属性都可以存放一个属性值，这个值的内容可以是原始值，函数或变量。一般将属性值为函数的属性称为方法。
 
 ###创建对象
@@ -197,5 +197,5 @@ Person.prototype. constructor 指向 Person。
 对象的constructor属性指向该对象的构造函数。所有函数和对象最终都是由Function构造函数得来，所以constructor属性的终点就是Function这个函数。
 
 **3.__proto__属性**
-对象的`__proto__`属性是由一个对象指向一个对象，即指向它们的原型对象（也可以理解为父对象）。
+对象的`__proto__`属性是由一个对象指向它的原型对象。
 作用就是当访问一个对象的属性时，如果该对象内部不存在这个属性，那么就会去它的__proto__属性所指向的那个对象（可以理解为父对象）里找，如果父对象也不存在这个属性，则继续往父对象的__proto__属性所指向的那个对象（可以理解为爷爷对象）里找，如果还没找到，则继续往上找…直到原型链顶端null，此时若还没找到，则返回undefined，由以上这种通过__proto__属性来连接对象直到null的一条链即为所谓的原型链。
