--- a/ES6/14.异步函数.md
+++ b/ES6/14.异步函数.md
@@ -1,5 +1,7 @@
-generator函数
+异步函数
 ===================
+
+###Generator 函数
 Generator 函数是 ES6 提供的一种异步编程解决方案，封装了多个内部状态。
 Generator 函数function关键字与函数名之间有一个星号；函数体内部使用yield表达式，定义不同的内部状态。
 ```
@@ -9,7 +11,7 @@ function* helloWorldGenerator() {
   return 'ending';
 }
 ```
-调用 Generator 函数后，该函数并不执行，返回的也不是函数运行结果，而是一个指向内部状态的指针对象，也就是遍历器对象（Iterator Object）。
+调用 Generator 函数后，该函数并不执行，而是返回一个指向内部状态的指针对象，也就是遍历器对象（Iterator Object）。必须调用遍历器对象的next方法，使得指针移向下一个状态。
 ```
 var hw = helloWorldGenerator();
 hw.next()
@@ -23,5 +25,5 @@ hw.next()
 ```
 yield后面的表达式，只有当调用next方法、内部指针指向该语句时才会执行。
 
-###异步
-
+###async 函数
+ES2017 标准引入了 async 函数，是 Generator 函数的语法糖。
