--- a/THREE/10.光线.md
+++ b/THREE/10.光线.md
@@ -1,13 +1,13 @@
 光线
 ===
-###环境光
+###环境光AmbientLight
 环境光是指场景整体的光照效果，环境光没有明确的光源位置，在各处形成的亮度也是一致的。
 
     THREE.AmbientLight(hex)
 在设置环境光时，只需要指定光的颜色。使用环境光渲染时，环境光并不在乎物体材质的 color 属性，而是 `ambient` 属性。 ambient 属性的默认值是 0xffffff 。
 当环境光使用的颜色比较明亮，渲染的颜色往往会过饱和。因此，环境光通常使用白色或者灰色，作为整体光照的基础。
 
-###点光源
+###点光源PointLight
 点光源是一种单点发光，照射所有方向的光源。点光源照到不同物体表面的亮度是线性递减的。
 
     THREE.PointLight(hex, intensity, distance)
@@ -17,7 +17,7 @@
     light.position.set(0, 1.5, 2);
     scene.add(light);
 
-###聚光灯
+###聚光灯SpotLight
 聚光灯是一种特殊的点光源，它能够朝着一个方向投射光线。聚光灯投射出的是类似圆锥形的光线，与现实中看到的聚光灯是一致的。
 
     THREE.SpotLight(hex, intensity, distance, angle, exponent)
@@ -33,7 +33,7 @@
     light.target = cube;
 
 
-###平行光
+###平行光DirectionalLight
 对于任意平行的平面，平行光照射的亮度都是相同的，而与平面所在位置无关。
 
     THREE.DirectionalLight(hex, intensity)
