--- a/THREE/2.渲染器.md
+++ b/THREE/2.渲染器.md
@@ -1,15 +1,16 @@
-渲染
+渲染器
 ===
 
 ###WebGLRender
-使用WebGLRender对象能调动计算机显卡，计算指定相机角度下的scene样子进行渲染。
+使用WebGLRender对象能调动计算机显卡，计算指定相机角度下的scene进行渲染。
 
     var renderer = new THREE.WebGLRenderer();
     renderer.setClearColor(0xEEEEEE);
-    renderer.setSize(window.innerWidth, window.innerHeight);.
-    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);  //设置设备像素比,避免HiDPI设备上绘图模糊
 
 调用`setClearColor(0xEEEEEE)`将渲染器的背景色设置为白色，调用`setSize()`来控制渲染器渲染scene的范围。
+渲染器WebGLRenderer的`.domElement`属性是Three.js执行渲染方法`.render()`的渲染结果，本质上就是一个HTML元素Canvas。
 
     //将渲染的结果输出到指定页面元素中
     document.getElementById("WebGL-output").appendChild(renderer.domElement); 
