--- a/THREE/9.加载几何模型.md
+++ b/THREE/9.加载几何模型.md
@@ -1,6 +1,6 @@
 加载几何模型
 ====
-Three.js 有一系列导入外部文件的辅助函数，是在 three.js 之外的，使用前需要额外下载。可以在[这里查看][1]。*.obj 是最常用的模型格式，导入 *.obj 文件需要 OBJLoader.js ；导入带 *.mtl 材质的*.obj 文件需要 MTLLoader.js 以及 OBJMTLLoader.js 。
+导入外部模型，需要引入对应的加载器js代码。加载器可以在[这里查看][1]。
 
 ###无材质模型
 创建 loader 变量，用于导入模型：
