--- a/THREE/4.照相机.md
+++ b/THREE/4.照相机.md
@@ -21,11 +21,24 @@
 ###透视投影相机
 透视投影是更符合人眼视觉的投影，构造函数是：
 
-    PerspectiveCamera( fov, aspect, near, far )
+    THREE.PerspectiveCamera( fov, aspect, near, far )
 ![](./相关文件/2.2.png)
-fov：为视角的大小,如果设置为0,相当你闭上眼睛了,所以什么也看不到,如果为180,那么可以认为你的视界很广阔,但是在180度的时候，往往物体很小，因为他在你的整个可视区域中的比例变小了。
+fov：为视角的大小,如果设置为0,相当你闭上眼睛了,所以什么也看不到,如果为180,那么可以认为你的视界很广阔,但是在180度的时候，往往物体很小，因为他在你的整个可视区域中的比例变小了。一般设置60-90。
 aspect：为实际窗口的纵横比，即宽度除以高度。通常设为Canvas 的横纵比例。
 
-    var camera = new THREE.PerspectiveCamera(45, 400 / 300, 1, 100);
+    var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
     camera.position.set(0, 0, 5);
+    camera.lookAt(scene.position); //设置相机方向(指向的场景对象)
     scene.add(camera);
+**自适应渲染**
+```
+// 窗口被调整大小
+window.onresize=function(){
+  // 重置渲染器输出画布canvas尺寸
+  renderer.setSize(window.innerWidth,window.innerHeight);
+  // 设置观察范围长宽比aspect为窗口宽高比
+  camera.aspect = window.innerWidth/window.innerHeight;
+  // 如果相机的一些属性发生了变化，需要执行updateProjectionMatrix ()方法更新相机的投影矩阵
+  camera.updateProjectionMatrix ();
+}
+```
