--- a/THREE/8.网格模型.md
+++ b/THREE/8.网格模型.md
@@ -1,4 +1,4 @@
-物体
+网格模型
 ===
 使用几何形状和材质就能创建物体了。最常用的一种物体就是网格（Mesh），网格是由顶点、边、面等组成的物体；其他物体包括线段（Line）、骨骼（Bone）、粒子系统（ParticleSystem）等。
 创建物体需要指定几何形状和材质，其中，几何形状决定了物体的顶点位置等信息，材质决定了物体的颜色、纹理等信息。
