--- a/THREE/19.辅助.md
+++ b/THREE/19.辅助.md
@@ -9,7 +9,6 @@
     var axesHelper = new THREE.AxesHelper( length );
     scene.add( axesHelper );
 length(可选的) 表示代表轴的线段长度. 默认为 1。
-[实例演示][1]
 
 ###性能检测stats
 检测当前场景的渲染帧率和显存占用情况；
@@ -21,16 +20,9 @@ length(可选的) 表示代表轴的线段长度. 默认为 1。
     document.body.appendChild(_stats.domElement);
 使用时，需要添加入渲染函数内：
 
-    function Animate()
-    {
-        requestAnimationFrame(Animate);
-        Render();
-    }
-
     function Render()
     {
         stats.update();
-        render.render(scene,camera);
+        webGLRenderder.render(scene,camera);
+        requestAnimationFrame(Render);
     }
-
-  [1]: http://www.yanhuangxueyuan.com/threejs/examples/#webgl_geometry_convex
