--- a/THREE/2.渲染器.md
+++ b/THREE/2.渲染器.md
@@ -4,7 +4,10 @@
 ###WebGLRender
 使用WebGLRender对象能调动计算机显卡，计算指定相机角度下的scene进行渲染。
 
-    var renderer = new THREE.WebGLRenderer();
+    var renderer = new THREE.WebGLRenderer({
+        //执行抗锯齿
+        antialias: true
+    });
     renderer.setClearColor(0xEEEEEE);
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);  //设置设备像素比,避免HiDPI设备上绘图模糊
