--- a/THREE/5.相机控件.md
+++ b/THREE/5.相机控件.md
@@ -23,11 +23,8 @@ TrackballControls（轨迹球控件）围绕中心来展示。
 
 **相机控件要生效必须在render中更新**
 
-    var clock=new THREE.Clock();
     function render(){
-        var delte=clock.getDelta();
-        controls.update(delta);
+        controls.update();
         webGLRenderder.render(scene,camera);
         requestAnimationFrame(render);
     }
-其中， THREE.Clock()对象可以获取一次渲染耗费的时间，调用clock.getDelta()会返回此次调用和上次调用之间的时间。
