--- a/Ajax/1.Ajax基本用法.md
+++ b/Ajax/1.Ajax基本用法.md
@@ -39,10 +39,21 @@ XMLHttpRequest 用于在后台与服务器交换数据。
 **statusText**属性
 伴随状态码的字符串信息，当状态为 200 的时候它是 “OK”，当状态为 404 的时候它是 “Not Found”。
 
-3.**responseText** 或 **responseXML** 属性
-获得来自服务器的响应返回内容。
+3.**responseType**
+设置返回数据的类型。
+1. ""	将 responseType 设为空字符串与设置为"text"相同， 是默认类型 （实际上是 DOMString）。
+2. "arraybuffer"	response 是一个包含二进制数据的 JavaScript ArrayBuffer 。
+3. "blob"	response 是一个包含二进制数据的 Blob 对象 。
+4. "document"	response 是一个 HTML Document 或 XML XMLDocument ，这取决于接收到的数据的 MIME 类型。请参阅 HTML in XMLHttpRequest 以了解使用 XHR 获取 HTML 内容的更多信息。
+5. "json"	response 是一个 JavaScript 对象。这个对象是通过将接收到的数据类型视为 JSON 解析得到的。
+
+4.**response**(**responseText** 或 **responseXML** )
+获得来自服务器的响应返回内容response,可能为 ArrayBuffer、Blob、Document，或 DOMString，取决于 responseType。
 responseText获得从服务器进程返回数据的字符串形式。
 responseXML获得从服务器进程返回的DOM兼容的文档数据对象。
+
+5.**timeout**
+表示该请求的最大请求时间（毫秒），若超出该时间，则请求会自动结束。
 
 ###XMLHttpRequest对象的方法
 将请求发送到服务器，需要使用 XMLHttpRequest 对象的 open() 和 send() 方法：
@@ -62,19 +73,22 @@ responseXML获得从服务器进程返回的DOM兼容的文档数据对象。
 在调用open方法之后，提供头部需要的值。
 
 
-###onreadystatechange 事件
+### 事件
+**onreadystatechange**
+
 当请求被发送到服务器时，我们需要执行一些基于响应的任务。
 readyState属性存有 XMLHttpRequest 的状态信息，每当 readyState 改变时，就会触发 onreadystatechange 事件。
+
+**进度事件**
+`progress`，`load`，`error`，`abort`
+
+progress 事件同时存在于下载和上传的传输。下载相关事件在 XMLHttpRequest 对象上被触发。上传相关事件在 XMLHttpRequest.upload 对象上被触发。
 
 ###发起异步请求的步骤
 1.新建XMLHttpRequest对象
 2.建立onreadystatechange存储的函数
 3.发送请求
 
- 
-
-
-----------
     <!DOCTYPE html>
     <html lang="en">
     <head>
