--- a/HTML/8.插入超链接.md
+++ b/HTML/8.插入超链接.md
@@ -84,3 +84,11 @@ target 属性规定在何处打开链接文档。属性值包括：
 在当前的整个浏览器窗口中打开所链接的文档，因而会删除所有框架。
 5.framename
 在指定的框架中打开被链接文档。framename与对应框架的name属性一致。
+
+###base
+base 标签为页面上的所有链接规定默认地址或默认目标。
+
+    <head>
+        <base href="***" />
+        <base target="_blank" />
+    </head>
