--- a/JS/15.DOM对象.md
+++ b/JS/15.DOM对象.md
@@ -1,7 +1,6 @@
 DOM对象
 ===================
-DOM就是一个接口，可以通过DOM来访问 HTML 文档的所有节点，每一个节点就是一个“对象”。
-DOM节点对象包括Document 对象，Element 对象，Attribute 对象，Event 对象。
+在JavaScript内，html是像树叉一样的层级结构，每一层就是一个DOM，通过DOM可以访问 HTML 文档的所有层级节点，每一个DOM节点就是一个“对象”。
 
 ###遍历获取节点/元素
 
@@ -23,11 +22,11 @@ DOM节点对象包括Document 对象，Element 对象，Attribute 对象，Event
  - nextSibling / nextElementSibling
 当前节点的后一个兄弟节点 / 元素
 
-需要注意，子节点返回的值除了子元素，也会返回换行等“无用”元素。可以只选取需要的节点：
+节点返回的值除了元素，也会返回换行等不需要的元素，所以需要取出需要的节点：
 
     for (var i=0, len=element.childNodes.length; i < len; i++){ 
         if (element.childNodes[i].nodeType == 1){ 
-        //执行某些操作
+            //执行某些操作
         } 
     }
 其中`nodeType`的值表示节点类型，有12个值：
