--- a/JS/17.浏览器对象（BOM）.md
+++ b/JS/17.浏览器对象（BOM）.md
@@ -2,7 +2,7 @@
 ===================
 BOM：Browser Object Model，即浏览器对象模型，提供了独立于内容的、可以与浏览器窗口进行互动的对象结构。
 Browser对象：指BOM提供的多个对象，包括：Window、Navigator、Screen、History、Location等。
-其中Window对象为顶层对象，其他对象都以Window对象为基础，window对象的属性和方法都可以省略不写window对象。
+其中Window对象为顶层对象，其他对象都以Window对象为基础，window对象的属性和方法都可以省略不写window。
 
 
 ###Window 对象
@@ -161,11 +161,6 @@ location.replace(URL 字符串)
 Location.reload(布尔值)  
 ```
 重新加载当前网址。参数为true，将向服务器重新请求这个网页，并且重新加载后，网页将滚动到头部（即scrollTop === 0）。如果参数是false或为空，浏览器将从本地缓存重新加载该网页，并且重新加载后，网页的视口位置是重新加载前的位置。
-
-###存储对象
-Web 存储 API 提供了 sessionStorage （会话存储） 和 localStorage（本地存储）两个存储对象来对网页的数据进行添加、删除、修改、查询操作。
-`localStorage` 用于长久保存整个网站的数据，保存的数据没有过期时间，直到手动去除。
-`sessionStorage` 用于临时保存同一窗口(或标签页)的数据，在关闭窗口或标签页之后将会删除这些数据。
 
 
 
