--- a/JS/22.表单对象.md
+++ b/JS/22.表单对象.md
@@ -39,7 +39,8 @@ FormData 提供以下实例方法：
 **FileList 对象**
 用户使用表单的文件上传控件（	&lt;input type="file"	&gt;）选中文件以后，浏览器就会生成一个数组，里面是每一个用户选中的文件。
 ```
-// HTML 代码： <input id="fileItem" type="file">
+<input id="fileItem" type="file">
+
 var filesArr = document.getElementById('fileItem').files;
 ```
 filesArr就是一个 FileList 的实例。
