--- a/JS/17.浏览器对象（BOM）.md
+++ b/JS/17.浏览器对象（BOM）.md
@@ -126,7 +126,15 @@ prompt()方法对话框用于输入并返回用户输入的字符串。用户点
 
 ###Navigator 对象
 包含有关浏览器的信息。
-
+```
+if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
+	//window.location.href ="iOS.html";
+} else if (/(Android)/i.test(navigator.userAgent)) {
+	//window.location.href ="Android.html";
+} else {
+	//window.location.href ="pc.html";
+};
+```
 ###Screen 对象
 Screen 对象包含有关客户端显示屏幕的信息。
 
