--- a/HTML/8.插入超链接.md
+++ b/HTML/8.插入超链接.md
@@ -16,9 +16,9 @@
     <a href="http://cn.oncedoc.com"><img src="OnceDoc.jpg" alt="OnceDoc"></a>
 以上就是一个图片链接。
 ##下载链接
-下载链接和文本链接没有太大的区别，也是直接添加文件相对路径就可以了。但是，存在部分浏览器是否支持的问题，有的浏览器需要添加download属性，属性内容也是文件相对路径。因此，在写下载链接时，最好添加download属性。
+下载链接和文本链接没有太大的区别，也是直接添加文件相对路径就可以了。添加download属性可以设置文件下载后的名字。
 
-    <a href="瓦力1.jpg" download="">下载机器人瓦力</a>
+    <a href="瓦力1.jpg" download="filename">下载机器人瓦力</a>
 <hr>
    
     <!DOCTYPE html>
@@ -31,7 +31,7 @@
 	<p>
 		文本链接<a href="http://cn.oncedoc.com">Oncedoc</a><br>
         图片链接<a href="http://cn.oncedoc.com"><img src="OnceDoc.jpg" alt="OnceDoc"></a><br>
-        下载链接<a href="瓦力1.jpg" download="瓦力1.jpg">下载机器人瓦力</a>
+        下载链接<a href="瓦力1.jpg" download="机器人瓦力">下载机器人瓦力</a>
 	</p>
     </body>
     </html>
