--- a/开发规范.md
+++ b/开发规范.md
@@ -64,14 +64,9 @@ load	加载某些数据
 ② 在代码后面添加注释：//(双斜线)与代码之间保留一个空格，并且//(双斜线)与注释文字之间保留一个空格。
 
 **2.多行注释**
-以`/*`开头，`*/`结尾。
-```
-/*
-* 代码执行到这里后会调用setTitle()函数
-* setTitle()：设置title的值
-*/
-setTitle();
-```
+以`/*`开头，`*/`结尾，用来注释一段代码或说明。
+用于`/*`和`*/`可能会在正则内用到，所以块注释对于代码块来说不安全。因此，最好只用来注释文字说明。
+
 **3 函数注释**
 函数注释也是多行注释的一种，但是包含了特殊的注释要求。
 ```
@@ -82,11 +77,19 @@ setTitle();
 ```
 常用注释关键字：
 ```
-@param	@param 参数名 {参数类型}  描述信息	描述参数的信息	@param name {String} 传入名称
-@return	@return {返回类型} 描述信息	描述返回值的信息	@return {Boolean} true:可执行;false:不可执行
-@author	@author 作者信息 [附属信息：如邮箱、日期]	描述此函数作者的信息	@author 张三 2015/07/21 
-@version	@version XX.XX.XX	描述此函数的版本号	@version 1.0.3
-@example	@example 示例代码	演示函数的使用	@example setTitle('测试')
+@param 参数名 {参数类型}  描述信息	描述参数的信息	@param name {String} 传入名称
+
+@return {返回类型} 描述信息	描述返回值的信息
+@return {Boolean} true:可执行;false:不可执行
+
+@author 作者信息 [附属信息：如邮箱、日期]	描述此函数作者的信息	
+@author 张三 2015/07/21 
+
+@version XX.XX.XX	描述此函数的版本号	
+@version 1.0.3
+
+@example 示例代码	演示函数的使用	
+@example setTitle('测试')
 ```
 ###框架
 
