--- a/ES6/15.class.md
+++ b/ES6/15.class.md
@@ -136,15 +136,15 @@ class B extends A{
 let b = new B();
 b.log() //B {}
 ```
-需要注意，无法通过super对象获取父类和子类的属性值。
-如果通过super对某个属性赋值，这时super就是this。
+需要注意，可以通过super对某个属性赋值，这时super就是this。但**无法通过super对象获取父类和子类的属性值**。
+
 ```
 class A {
   constructor() {
     this.x = 1;
   }
   logA(){
-    console,log(this.x)
+    console.log(this.x)
   }
 }
 
@@ -163,7 +163,6 @@ class B extends A {
   logB2(){
     console.log(super.x) // undefined
   }
-
 }
 
 var b=new B()
