--- a/IDE/5.Git/3.工作区和版本库.md
+++ b/IDE/5.Git/3.工作区和版本库.md
@@ -10,6 +10,8 @@
 第二步是用`git commit`提交更改，实际上就是把暂存区的所有内容提交到当前分支。
 所以，`git add`命令实际上就是把要提交的所有修改放到暂存区（Stage），然后，执行`git commit`就可以一次性把暂存区的所有修改提交到分支。
 
+![](../相关文件/5.3.1.jpg)
+
 ###撤销修改
 以上，文件的位置是存在3种情况：工作区，暂存区，当前分支。
 文件的修改位于工作区时，可以手动更改来撤销修改，也可以使用`git checkout -- <file>`命令来撤销：
