--- a/Vue/10.表单绑定.md
+++ b/Vue/10.表单绑定.md
@@ -20,53 +20,40 @@
 `v-model`将 `value` 的值绑定至data内。
 
 **单选框**
+```
+<label :for="num" v-for="num in arrNum" :key="num">
+  <input type="radio" :id="num" :value="num" v-model="isPick">{{num}}
+</label>
 
-    <div id="app">
-      <input type="radio" id="one" value="One" v-model="picked">
-      <label for="one">One</label>
-      <br>
-      <input type="radio" id="two" value="Two" v-model="picked">
-      <label for="two">Two</label>
-      <br>
-      <span>Picked: {{ picked }}</span>
-    </div>
+data(){ 
+  return {
+    arrNum: [1, 2, 3, 4],
+    isPick: '',
+  }
+}
 
-    new Vue({
-      el: '#app',
-      data: {
-        picked: " "
-      }
-    })
-
+```
 **复选框**
+```
+<div class="app" v-cloak>
+  <label :for="num" v-for="num in arrNum" :key="num">
+    <input type="checkbox" :id="num" :value="num" v-model="isPick">{{num}}
+  </label>
+</div>
 
-    <div id='app'>
-      <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
-      <label for="jack">Jack</label>
-      <input type="checkbox" id="john" value="John" v-model="checkedNames">
-      <label for="john">John</label>
-      <input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
-      <label for="mike">Mike</label>
-      <br>
-      <span>Checked names: {{ checkedNames }}</span>
-    </div>
-
-
-    new Vue({
-      el: '#app',
-      data: {
-        checkedNames: []
-      }
-    })
-
+data(){ 
+  return {
+    arrNum: [1, 2, 3, 4],
+    isPick: [],
+  }
+}
+```
 ###列表框
 
     <div id="app">
       <select v-model="selected">
         <option disabled value="">请选择</option>
-        <option value="字母A">A</option>
-        <option value="字母B">B</option>
-        <option value="字母C">C</option>
+        <option :value="num" v-for="num in arrNum" :key="num">{{num}}</option>
       </select>
       <span>Selected: {{ selected }}</span>
     </div>
@@ -75,6 +62,7 @@
     new Vue({
       el: '#app',
       data: {
+        arrNum: [1, 2, 3, 4],
         selected: ''
       }
     })
