--- a/Vue/11.组件（一）.md
+++ b/Vue/11.组件（一）.md
@@ -6,8 +6,8 @@
 注册一个全局组件语法格式如下：
 
     Vue.component("tagName", options)
-tagName 为自定义组件名，options 为配置选项对象。
-这个组件是全局注册的。也就是说在注册之后可以用在任何新创建的 Vue 根实例 (new Vue) 中。
+tagName 为自定义组件名，为了避免和未来html新标签重复，所以一般将组件名设置为a-b的形式。options 为配置选项对象。
+这个组件是全局注册的，可以用在任何新创建的 Vue 实例 (new Vue) 中。
 
     <div id="components-demo">
       <button-counter></button-counter>
@@ -22,17 +22,12 @@ tagName 为自定义组件名，options 为配置选项对象。
           count: 0
         }
       },
-      //template只能有一个根节点
+      //模版只能有一个根节点
       template: '<button v-on:click="count++">You clicked me {{ count }} times.</button>'
     })
     // 创建根实例
     new Vue({ el: '#components-demo' })
-**一个组件的 data 选项必须是一个函数**，这样每个实例才会有自己的独立数据，这些实例之间才不会产生干扰。如果使用对象：
-
-    data: {
-      count: 0
-    }
-则实例使用同一数据，相互影响。
+**一个组件的 data 选项必须是一个函数**，这样每个实例才会有自己的独立数据，这些实例之间才不会产生干扰。如果使用对象，则实例使用同一数据，相互影响。
 
 全局注册必须在根 Vue 实例 (通过 new Vue) 创建之前注册。
 ###局部组件
@@ -45,6 +40,7 @@ tagName 为自定义组件名，options 为配置选项对象。
       }
     })
     
+---    
 组件的template内容过多时，可以将template放在html内，通过template的id引入组件内：
 
     //html内
@@ -55,13 +51,13 @@ tagName 为自定义组件名，options 为配置选项对象。
     //组件内
     template: '#example'
 
-需要注意：template标签内只能有一个根元素。
+同样，template标签内，只能有一个根元素。
 ###插槽slot
 插槽用于放置具体的信息，组件在复用时，使用slot就可以传递不同的值：
 
 	<div id="app">
-		<panel>111</panel>   //输出111
-		<panel>222</panel>  //输出222
+		<panel>111</panel>   //111
+		<panel>222</panel>   //222
 	</div>
 	<template id="example">
 		<div><slot></slot></div>
@@ -84,6 +80,8 @@ tagName 为自定义组件名，options 为配置选项对象。
 			<div slot="second">222</div>
 		</panel>
 	</div>
+
+
 	<template id="example">
 		<div>
 			<div><slot name='first'></slot></div>
