--- a/Vue/12.组件（二）.md
+++ b/Vue/12.组件（二）.md
@@ -1,7 +1,7 @@
 组件
 ===================
-###组件嵌套
-组件之间可以有嵌套关系，外部组件称为父组件，内部组件称为子组件，父组件嵌套子组件时，需要内部注册子组件：
+###父组件与子组件
+组件之间可以有嵌套关系，外部组件称为父组件，内部组件称为子组件，父组件嵌套子组件时，需要`components`注册子组件，再使用：
 
     let child={
         template:'<div>子组件</div>'
@@ -12,18 +12,19 @@
             child:child
         }
     };
-    
-vm使用组件时，也需要进行注册。可以将vm看作是最底层的组件，称为根组件（root组件）。
 
-###prop
-prop可以给组件实例注册自定义属性。
+    vue.component('child-comp',child);
+    vue.component('parent-comp',parent);
+
+###父组件传值-props
+props可以给组件实例注册自定义属性。
 ```
 Vue.component('post-data', {
   props: ['title'],
   template: '<h3>111</h3>'
 })
 ```
-此时，title就成为了组件实例的属性，像这样把数据作为属性值传递进来，这个值时可以在组件中使用的，在生成的组件实例中能得到到这个值：
+此时，title就可以作为组件实例的html属性。把数据作为属性值的话，就可以在组件中使用，在组件实例中能得到这个值：
 ```
 <post-data title="想要传递数据"></post-data>
 
@@ -41,10 +42,7 @@ data(){
     }    
 }
 ```
-```
-<post-data v-bind:title="post[0].title"></post-data>
-```
-需要循环渲染，可以这样：
+则组件可以这样：
 ```
 <post-data v-for="post in posts" v-bind:key="post.index" v-bind:title="post.title"></post-data>
 ```
@@ -71,7 +69,7 @@ props: {
 }
 ```
 
-###组件事件
+###子组件传值-事件
 如果组件要把数据传递到vm，就组件通过`$emit()`自定义事件。`$emit("自定义事件名",data)`为组件自定义一个事件，在触发当前实例上的事件时触发，需要绑定在实例methods的具体事件内。
 ```
 Vue.component('post',{
@@ -118,11 +116,11 @@ new Vue({
 ```
 此时，vm就获取到了组件内的数据。
 
-###vm.$children/vm.$refs与vm.$parent/vm.$root
+###`vm.$children/vm.$refs`与`vm.$parent/vm.$root`
 Vue还提供了API来获取组件的子组件`vm.$children`/`vm.$refs`和父组件`vm.$parent`。
 
-**vm.$children和vm.$refs**
-vm.$children和vm.$refs的不同之处在于，vm.$children会直接获取所有的子组件，vm.$refs可以用来获取添加ref属性的组件。
+**`vm.$children和vm.$refs`**
+`vm.$children`和`vm.$refs`的不同之处在于，`vm.$children`会直接获取所有的子组件，`vm.$refs`可以用来获取添加ref属性的组件。
 
     <div id="#app">
         <parent></parent>
@@ -136,8 +134,8 @@ vm.$children和vm.$refs的不同之处在于，vm.$children会直接获取所有
     console.log(this.$children)  //[VueComponent, VueComponent]
     console.log(this.$refs.p)    //VueComponent {}
 
-**vm.$parent和vm.$root** 
-vm.$parent会获取组件的父组件，vm.$root会获取组建的根组件（vm）。
+**`vm.$parent`和`vm.$root`** 
+`vm.$parent`会获取组件的父组件，`vm.$root`会获取组建的根组件（vm）。
 
 注意，API的方法虽然简洁，但是加深了组件之间的耦合，不利于组件的复用。
 
