--- a/Vue/12.组件（二）.md
+++ b/Vue/12.组件（二）.md
@@ -1,7 +1,7 @@
 组件
 ===================
 ###父组件与子组件
-组件之间可以有嵌套关系，外部组件称为父组件，内部组件称为子组件，父组件嵌套子组件时，需要`components`注册子组件，再使用：
+组件之间可以有嵌套关系，外部组件称为父组件，内部组件称为子组件，父组件内需要`components`对子组件进行注册：
 
     let child={
         template:'<div>子组件</div>'
@@ -9,113 +9,130 @@
     let parent={
         template:'<div><div>父组件</div><child></child></div>',
         components:{
-            child:child
+            'child':child
         }
     };
 
-    vue.component('child-comp',child);
+    //全局注册父组件
     vue.component('parent-comp',parent);
-
+这里，子组件是父组件的局部注册组件，只能在父组件内使用，如果需要单独使用子组件，还需要另外全局注册子组件。
 ###父组件传值-props
 props可以给组件实例注册自定义属性。
+子组件构造器内添加props属性：
 ```
-Vue.component('post-data', {
-  props: ['title'],
+Vue.component('child-comp', {
+  props: ['postdata'],
   template: '<h3>111</h3>'
 })
 ```
-此时，title就可以作为组件实例的html属性。把数据作为属性值的话，就可以在组件中使用，在组件实例中能得到这个值：
+此时，postdata字符串就可以作为父组件内的子组件实例的属性。再将父组件的数据作为属性值：
 ```
-<post-data title="想要传递数据"></post-data>
+<child-comp :postdata="父组件的数据"></child-comp>
+```
+父组件的数据会储存在postdata内:
+```
+template: '<h3>{{ postdata }}</h3>'
+```
+例如父组件的数据是一个数组：
+```
+<div id="app" v-cloak>
+    <parent-comp></parent-comp>
+</div>
 
-template: '<h3>{{ title }}</h3>'
-```
-向title传递的数据，可以来自vm的data返回的数据，这样，vm的值就传递到了组件进行使用。例如数据是一个数组：
-```
-data(){
-    return {
-        posts: [
-          {title: '数据1' },
-          {title: '数据2' },
-          {title: '数据3' }
-        ]
-    }    
+
+let childOptions = {
+    template:`
+        <div>
+            // 第三步：使用获取到的值
+            <h2 v-for='item in postdata' :key='item.title'>{{item.title}}</h2>
+        </div>`,
+    // 第一步：注册
+    props:['postdata']
 }
-```
-则组件可以这样：
-```
-<post-data v-for="post in posts" v-bind:key="post.index" v-bind:title="post.title"></post-data>
-```
-任何值都可以传递给任何 prop，所以，可以直接传递posts：
-```
-Vue.component('post-data', {
-  props: ['posts'],
-  template: '<h3>{{ posts.title }}</h3>'
+
+let parentOptions = {
+    template:`
+        <div> 
+            // 第二步：获取父组件值
+            <child-comp :postdata='posts'></child-comp>
+        </div>`,
+    components:{
+        'child-comp': childOptions
+    },
+    data() {
+        return {
+            posts: [
+                {title: '数据1' },
+                {title: '数据2' },
+                {title: '数据3' }
+            ]
+        }
+    },
+}
+Vue.component('parent-comp', parentOptions)
+
+new Vue({
+    el:'#app'
 })
-
-<post-data v-for="post in posts" v-bind:key="post.index" v-bind:posts="posts"></post-data>
 ```
-
-props除了数组形式，也可以是对象：
+**对象写法**
+props也可以是一个对象：
 ```
-props: {
-  title: String,
-  likes: Number,
-  isPublished: Boolean,
-  commentIds: Array,
-  author: Object,
-  callback: Function,
-  contactsPromise: Promise // or any other constructor
+props:{
+    postdata: Array
 }
 ```
+这样做的好处是可以明确传递的数据类型。
 
 ###子组件传值-事件
-如果组件要把数据传递到vm，就组件通过`$emit()`自定义事件。`$emit("自定义事件名",data)`为组件自定义一个事件，在触发当前实例上的事件时触发，需要绑定在实例methods的具体事件内。
+子组件通过`$emit("自定义事件名",要传递的数据)`注册自定义事件：
 ```
-Vue.component('post',{
-        data(){
-            return{
-                num:0,
-            }
-        },
-        template:'#example',
-        methods:{
-            add(){
-                this.$emit("postdata",this.num)
-            }
+let childOptions = {
+    template:`
+        <div>
+            // 第一步：绑定事件，调用函数
+            <h2 @click='senddata'>子组件</h2>
+        </div>`,
+    props:{
+        postdata: Array
+    },
+    data() {
+        return {
+            childData: '子组件数据'
         }
-    })
+    },
+    methods: {
+        // 第二步： 给子组件实例自定义事件
+        senddata(){
+            this.$emit('senddata',this.childData)
+        }
+    },
+}
 ```
-这样，在组件click时，add()事件就为组件实例自定义了一个postdata事件并触发这个事件，同时将this.num数据传递出来：
+子组件触发click事件时，`$emit`为子组件自定义了一个senddata事件,父组件内子组件实例会自动触发该自定义事件，调用父组件methods的函数：
 ```
-<template id="example">
-    <div>
-        <div @click="add">{{num}}</div>
-    </div>
-</template>
+let parentOptions = {
+    template:`
+        <div>
+            // 第三步：绑定事件，触发函数
+            <child-comp @senddata='getdata'></child-comp>
+            <p>{{childrendData}}</p>
+        </div>`,
+    components:{
+        'child-comp': childOptions
+    },
+    data() {
+        return {
+            childrendData: null
+        }
+    },
+    methods: {
+        getdata(data){
+            this.childrendData = data
+        }
+    },
+}
 ```
-再将组件实例触发postdata事件的具体函数绑定到vm的methods方法内：
-```
-<post @postdata="vmpost"></post>
-```
-vm的methods方法内，使用vmpost函数接受数据，这个数据将作为函数的参数传递进来：
-```
-new Vue({
-	el:'#app',
-	data(){
-		return{
-			temdata:null
-		}
-	},
-	methods:{
-		vmpost(data){
-			this.temdata=data
-		}
-	}
-})
-```
-此时，vm就获取到了组件内的数据。
-
 ###`vm.$children/vm.$refs`与`vm.$parent/vm.$root`
 Vue还提供了API来获取组件的子组件`vm.$children`/`vm.$refs`和父组件`vm.$parent`。
 
