--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -191,11 +191,12 @@ keypress(按键)
 keyup(键起来)
 
 ###表单事件
-事件常用于以下元素：1.单行文本框text；2.多行文本框textarea；3.下拉列表select；
 focus和blur
 focus表示获取光标触发的事件，blur表示失去光标触发的事件。
 change
-当表单的值改变时触发的事件（包括下拉列表，文件上传）。
+当表单的值改变时且失去焦点触发的事件（包括下拉列表，文件上传）。
+input  
+当表单的值发生变化时就会触发
 select
 选中文本时触发的事件。
 
