--- a/JS/19.面向对象.md
+++ b/JS/19.面向对象.md
@@ -1,10 +1,10 @@
 面向对象
 ===================
-是指不需要了解对象的内部结构，就可以进行使用，只需要了解对象的属性与方法，就可以创建对象进行使用。例如可以直接使用Date对象来获取或设置时间，不需要知道为什么Date对象能实现这个功能。
-js对象指的是属性的集合，每个属性都可以存放一个属性值，这个值的内容可以是原始值，函数或变量。一般将属性值为函数的属性称为方法。
+属性是对象的状态，方法是对象的行为。面向对象就是将实物抽象成对象模板（称为类/`class`），使用类这个抽象概念来总结描述具有相同特征的实物。之后，通过这个类就可以生成具体的实物。
+
 
 ###创建对象
-实际是将属性和方法封装为一个对象。
+实际是设定属性和方法。
 
 **基本模式**
 1.使用new操作符和Object()构造函数
@@ -199,3 +199,11 @@ Person.prototype. constructor 指向 Person。
 **3.__proto__属性**
 对象的`__proto__`属性是由一个对象指向它的原型对象。
 作用就是当访问一个对象的属性时，如果该对象内部不存在这个属性，那么就会去它的__proto__属性所指向的那个对象（可以理解为父对象）里找，如果父对象也不存在这个属性，则继续往父对象的__proto__属性所指向的那个对象（可以理解为爷爷对象）里找，如果还没找到，则继续往上找…直到原型链顶端null，此时若还没找到，则返回undefined，由以上这种通过__proto__属性来连接对象直到null的一条链即为所谓的原型链。
+
+###new 命令的原理
+使用new命令时，依次执行下面的步骤：
+1.创建一个空对象作为返回值。
+2.将这个空对象的原型，指向构造函数的prototype属性。
+3.将这个空对象赋值给函数内部的this关键字。
+4.执行构造函数内部的代码。
+因此，在构造函数内部，所有对this的操作，都会发生在这个空对象上。
