--- a/JS/10.对象.md
+++ b/JS/10.对象.md
@@ -1,10 +1,14 @@
 对象
 ===================
-JavaScript 中的所有事物都是对象，既有内部原生对象，还允许自定义对象。
-对象就是带有`属性`和`方法`的特殊数据类型。属性是用来表示对象的描述（属性name与属性值value），方法用来表示对象的行为（函数）。访问属性和方法使用 `.`（点）操作符。
+JavaScript 中的所有事物都是对象。
+对象就是带有`属性`和`方法`的特殊数据类型。属性是用来表示对象的描述（属性name与属性值value），方法用来表示对象的行为（函数）。访问属性使用 `.`（点）操作符或`[]`操作符，访问方法使用 `.`（点）操作符。
 
 ###JavaScript 对象
-JavaScript 提供多个内建对象，包括`Array`，`Boolean`，`Date`，`Math`，`Number`，`String`，`RegExp`，`Function`，`Event`
+JavaScript 提供多个内建对象，包括`Array`，`Boolean`，`Date`，`Math`，`Number`，`String`，`RegExp`，`Function`，`Event`，这些对象都继承自`Object`对象。
+
+Object对象的原生方法分成两类：Object本身的方法（静态方法）与Object的实例方法。
+所谓“本身的方法”就是直接定义在Object对象的方法。例如`Object.keys()`方法和`Object.getOwnPropertyNames()`方法都用来遍历对象的属性。
+所谓实例方法就是定义在Object原型对象Object.prototype上的方法。它可以被Object实例直接使用。
 
 ###Browser 对象
 **Window 对象**
