--- a/JS/19.面向对象.md
+++ b/JS/19.面向对象.md
@@ -207,3 +207,12 @@ Person.prototype. constructor 指向 Person。
 3.将这个空对象赋值给函数内部的this关键字。
 4.执行构造函数内部的代码。
 因此，在构造函数内部，所有对this的操作，都会发生在这个空对象上。
+
+**instanceof**
+instanceof运算符用来判断实例和类之间的原型链关系。
+
+    function C(){}; 
+
+    var o = new C();
+    o instanceof C;  // true
+    o instanceof Object; // true
