--- a/ES6/14.异步函数.md
+++ b/ES6/14.异步函数.md
@@ -26,4 +26,18 @@ hw.next()
 yield后面的表达式，只有当调用next方法、内部指针指向该语句时才会执行。
 
 ###async 函数
-ES2017 标准引入了 async 函数，是 Generator 函数的语法糖。
+async 函数就是 Generator 函数的语法糖。
+async 函数返回一个 Promise 对象，可以使用then方法添加回调函数。
+await 操作符后需要一个 Promise 对象, await 会暂停async 函数执行，直到Promise 对象 resolve，才会接着执行 async 函数并返回解析值。
+
+	function testAwait (x) {
+		return new Promise((resolve) => {
+			setTimeout(() => {resolve(x);}, 2000);
+		});
+	}
+	
+	async function helloAsync() {
+		var x = await testAwait ("JS");
+		console.log(x); 
+	}
+	helloAsync ();  // JS
