--- a/JS/2.数据结构.md
+++ b/JS/2.数据结构.md
@@ -20,6 +20,7 @@ debugger* `function` this `with`
 `default` if `throw` delete 
 in `try`
 
+其中，break是终止循环并跳出该循环的，而return是终止函数，并返回return后面的值。
 
 ###常量与变量
 常量通常为固定和精确的值，包括数值和字符串。
