--- a/JS/9.调用函数.md
+++ b/JS/9.调用函数.md
@@ -1,57 +1,56 @@
 调用函数
 ===================
 调用函数时，加括号表示执行函数，不加括号表示指向函数整体，因为函数名是指向这个函数对象的指针。
-常用的函数调用方式有4种：
 
-（1）简单调用；
-（2）在表达式中调用；
-（3）在事件响应中调用；
-（4）通过链接调用；
+常用的函数执行方式有4种：
 
-###直接调用
-直接使用函数名称进行调用。
+**直接调用**
 
-	<script type="text/javascript">
-		function addnum(a,b,c) {
-			var m=a+b+c;
-			console.log(m);
-		}
-        addnum(1,2,3);   //直接调用，输出6
-	</script>
+	function addnum(a,b,c) {
+		var m=a+b+c;
+		console.log(m);
+	}
+    addnum(1,2,3);   //6
 
-###表达式中调用
-适用于有返回值的函数，然后函数的返回值参与表达式的计算。
 
-	<script type="text/javascript">
-		function addnum(a,b,c) {
-			var m=a+b+c;
-			return m;
-		}
-        cosole.log(addnum(1,2,3));    //函数执行结果参与表达式计算
-	</script>
+**表达式中调用**
 
-###事件响应中调用
-当事件产生时，可以调用某个函数来针对这个事件做出响应。
+	function addnum(a,b,c) {
+		var m=a+b+c;
+		return m;
+	}
+	cosole.log(addnum(1,2,3));    //6
 
-	<script type="text/javascript">
-		function addnum(a,b,c) {
-			var m=a+b+c;
-			return m;
-		}		
-	</script>
-	<input type="button" value="请点击" onclick="alert(addnum(1,2,3))">
-函数在执行过 return 语句后立即停止代码。因此，return 语句后的代码都不会被执行。
 
-###通过链接调用
-函数可以通过超链接来调用函数
+**事件响应中调用**
+当事件产生时，可以调用某个函数。
 
-    <a href="javascript:函数名"></a>
-    //例如：
-	<script type="text/javascript">
-		function addnum(a,b,c) {
-			var m=a+b+c;
-			alert(m);
-		}		
-	</script>
-	<a href="javascript:addnum(1,2,3)">点击查看</a>
+	<input type="button" value="点击查看" onclick="alert(addnum(1,2,3))">
 
+	function addnum(a,b,c) {
+		var m=a+b+c;
+		return m;
+	}		
+
+**通过链接调用**
+通过a标签来调用函数
+
+    <a href="javascript:addnum(1,2,3)">点击查看</a>
+
+	function addnum(a,b,c) {
+		var m=a+b+c;
+		alert(m);
+	}		
+	
+###递归
+一个函数有直接或间接调用自身的行为，就称为递归。
+
+	function foo(i) {
+		if (i < 0);
+		return false;
+		console.log(i);
+		foo(i - 1);
+	}
+	foo(3); //3 2 1 0
+
+每次函数调用，都会被压入堆栈内，占据一块内存，执行完毕后函数才能从堆栈里面移除。而递归函数在最后一次调用的函数执行完之前，所有的函数都没有执行完毕。所以，递归次数过多时，会导致堆栈溢出。
