--- a/JS/10.对象.md
+++ b/JS/10.对象.md
@@ -1,6 +1,5 @@
 对象
 ===================
-JavaScript 中的所有事物都是对象。
 对象就是带有`属性`和`方法`的特殊数据类型。属性是用来表示对象的描述（属性name与属性值value），方法用来表示对象的行为（函数）。访问属性使用 `.`（点）操作符或`[]`操作符，访问方法使用 `.`（点）操作符。
 
 ###JavaScript 对象
@@ -8,8 +7,20 @@ JavaScript 提供多个内建对象，包括`Array`，`Boolean`，`Date`，`Math
 
 Object对象的原生方法分成两类：Object本身的方法（静态方法）与Object的实例方法。
 所谓“本身的方法”就是直接定义在Object对象的方法。例如`Object.keys()`方法和`Object.getOwnPropertyNames()`方法都用来遍历对象的属性。
-所谓实例方法就是定义在Object原型对象Object.prototype上的方法。它可以被Object实例直接使用。
+所谓实例方法就是定义在Object原型对象Object.prototype上的方法。它可以被Object的实例继承使用。
 
+**字面量和对象**
+`Array`，`String`，`Function`，`Object`，`Number`包括字面量写法和对象写法，例如：
+
+    var str = "string";
+    typeof str; // "string"
+    str instanceof String; // false
+
+    var strObject = new String( "string" );
+    typeof strObject; // "object"
+    strObject instanceof String; // true
+原始值 "string" 并不是一个对象， 它只是一个字面量。  
+在必要时，语言会自动把字符串字面量转换成一个 String 对象，所以，一般都采用字面量写法来新建。
 ###Browser 对象
 **Window 对象**
 Window 对象表示浏览器中打开的窗口。
@@ -87,3 +98,8 @@ Object.getOwnPropertyDescriptor(obj, 'p')
 // }
 ```
 注意，Object.getOwnPropertyDescriptor方法只能获取对象自身的属性，不能用于继承的属性。
+
+**Object.defineProperty()**
+Object.defineProperty方法可以通过设置属性描述对象来新定义属性。
+
+    Object.defineProperty( 对象, 属性名, {属性描述对象});
