--- a/JS/15.DOM对象.md
+++ b/JS/15.DOM对象.md
@@ -115,6 +115,7 @@ getElementById()方法类似于CSS中的id选择器。
     node.attributes  //返回属性数组
     node.setAttribute("name","value");  //创建属性
     node.removeAttribute("name");  //删 除属性
+    node.getBoundingClientRect() //获取DOM基本位置大小属性
 
 **样式**
 
