--- a/JS/19.面向对象.md
+++ b/JS/19.面向对象.md
@@ -198,7 +198,7 @@ Person.prototype. constructor 指向 Person。
 
 **3.__proto__属性**
 对象的`__proto__`属性是由一个对象指向它的原型对象。
-作用就是当访问一个对象的属性时，如果该对象内部不存在这个属性，那么就会去它的__proto__属性所指向的那个对象（可以理解为父对象）里找，如果父对象也不存在这个属性，则继续往父对象的__proto__属性所指向的那个对象（可以理解为爷爷对象）里找，如果还没找到，则继续往上找…直到原型链顶端null，此时若还没找到，则返回undefined，由以上这种通过__proto__属性来连接对象直到null的一条链即为所谓的原型链。
+作用就是当访问一个对象的属性时，如果该对象内部不存在这个属性，那么就会去它的__proto__属性所指向的那个对象（可以理解为父对象）里找，如果父对象也不存在这个属性，则继续往父对象的__proto__属性所指向的那个对象（可以理解为爷对象）里找，如果还没找到，则继续往上找…直到原型链顶端null，此时若还没找到，则返回undefined，由以上这种通过__proto__属性来连接对象直到null的一条链即为所谓的原型链。
 
 ###new 命令的原理
 使用new命令时，依次执行下面的步骤：
