--- a/JS/3.数据类型.md
+++ b/JS/3.数据类型.md
@@ -124,14 +124,14 @@ constructor 属性返回具体实例的构造函数。
     }
     var person = new Object();
     setName(person);
-    alert(person.name); //"amy"
+    console.log(person.name); //"amy"
 
-变量储存在栈内存，对象储存在堆内存。
+如果对象在 console.log(..) 语句之后被修改， 就可能因为浏览器的 I/O 异步化造成输出的对象是修改后的对象。因此，最好在 JavaScript 调试器中使用断点，或者把对象序列化为字符串输出，比如通过 JSON.stringify(..)。
 
 ###数据类型转换
 
 **强制转换**
-强制转换主要指使用`Number()`、`String()`和`Boolean()`三个构造函数，手动将各种类型的值，转换成数字、字符串或者布尔值。
+强制转换指使用`Number()`、`String()`和`Boolean()`三个函数，将各种类型的值，强制转换成数字、字符串或者布尔值。
 1.`Number()`
 基本类型都能被Number转成数值或NaN。Number函数将字符串转为数值，要比parseInt函数严格很多。只要有一个字符无法转成数值，整个字符串就会被转为NaN。
 ```
@@ -174,7 +174,7 @@ Boolean(false) //false
 Boolean(new Boolean(false)) //true
 
 **自动转换**
-遇到以下三种情况时，JavaScript会自动转换数据类型
+遇到以下三种情况时，JavaScript会自动的，强制转换数据类型
 ```
 // 1. 不同类型的数据互相运算
 123 + 'abc' // "123abc"
