--- a/JS/22.表单对象.md
+++ b/JS/22.表单对象.md
@@ -37,24 +37,31 @@ FormData 提供以下实例方法：
 ###FileReader 对象
 
 **FileList 对象**
-用户使用表单的文件上传控件（	&lt;input type="file"	&gt;）选中文件以后，浏览器就会生成一个数组，里面是每一个用户选中的文件。
+用户使用表单选中文件以后，就会触发 change 事件，并实例化FileList 对象为一个files 集合,集合中包含一组 File 对象，每个 File 对象对应着一个文件。
 ```
 <input id="fileItem" type="file">
 
 var filesArr = document.getElementById('fileItem').files;
 ```
-filesArr就是一个 FileList 的实例。
+filesArr就是一个 FileList 的实例，内部的file对象具有只读属性：
+`name`：本地文件系统中的文件名。
+`size`：文件的字节大小。
+`type`：字符串，文件的 MIME 类型。
 
 **FileReader 对象**
-FileReader 对象用于读取FileList内的文件内容。
+FileReader 对象用于读取FileList内的文件内容，读取方式包括：
+`readAsText(file)`：以纯文本形式读取文件。
+`readAsDataURL(file)`：读取文件并将文件以数据 URI 的形式保存（一般用于图像文件）。
+`readAsArrayBuffer(file)`：读取文件并保存文件内容为ArrayBuffer。
+
 ```
 var reader = new FileReader();
-reader.readAsArrayBuffer(file);/reader.readAsBinaryString(file);/reader.readAsText(file)
+reader.readAsArrayBuffer(file);
+reader.readAsText(file);
 ```
-FileReader 实例属性：
-1. FileReader.error：读取文件时产生的错误对象
-2. FileReader.readyState：整数，表示读取文件时的当前状态。一共有三种可能的状态，0表示尚未加载任何数据，1表示数据正在加载，2表示加载完成。
-3. FileReader.result：读取完成后的文件内容，有可能是字符串，也可能是一个 ArrayBuffer 实例。
+读取的文件内容会保存在result属性内：
+
+    var data = reader.result
 
 加载事件：
 
@@ -63,7 +70,7 @@ FileReader 实例属性：
 3. FileReader.onload：load事件（读取操作完成）的监听函数，通常在这个函数里面使用result属性，拿到文件内容。
 4. FileReader.onloadstart：loadstart事件（读取操作开始）的监听函数。
 5. FileReader.onloadend：loadend事件（读取操作结束）的监听函数。
-6. FileReader.onprogress：progress事件（读取操作进行中）的监听函数。
+6. FileReader.onprogress：progress事件（读取操作进行中）的监听函数(50ms触发一次)。
 ```
 /* HTML 代码如下
   <input type="file" onchange="previewFile()">
@@ -84,3 +91,7 @@ function previewFile() {
   }
 }
 ```
+
+**读取拖放的文件**
+在页面上创建了自定义的放置目标之后，从桌面上把文件拖放到浏览器中也会触发 drop 事件。而且可以在 event.dataTransfer. files中读取到被放置的文件，当然此时它是一个 File 对象，与通过文件输入字段取得的 File 对象一样。
+注意，需要取消 dragenter、 dragover 和 drop 的浏览器默认行为。
