--- a/Ajax/5.同源和跨域.md
+++ b/Ajax/5.同源和跨域.md
@@ -14,7 +14,7 @@ IP和域名之间的转换工作称为域名解析，域名解析需要由专门
 通常情况下一个域名同一时刻只能对应一个IP地址。但是在域名服务商那里，可以把服务器群里面的多个提供相同服务的服务器IP设置一个域名可以轮询。但是同一时刻，一个域名只能解析出一个IP供你使用。这些IP可以轮流着被解析。一个IP可以绑定无数个域名，这个没有限制。
 
 **网址**
-URL是统一资源定位符（英语UniformResourceLocator的缩写）俗称为网址，网址格式为：<协议>://<域名或IP>:<端口>/<路径>。
+URL是统一资源定位符（英语UniformResourceLocator的缩写）俗称为网址，网址格式为：<协议>://<域名或IP>:<端口>/<路径><?查询><#哈希>。
 
 **端口**
 网络中一台主机只有一个IP，但是一个主机可以提供多个服务，端口号就用于区分一个主机上的不同服务。http协议服务所占用的端口默认为80端口。
