--- a/ES6/17.ArrayBuffer.md
+++ b/ES6/17.ArrayBuffer.md
@@ -1,10 +1,12 @@
 ArrayBuffer
 ===
 ArrayBuffer对象、TypedArray视图和DataView视图是 JavaScript 操作二进制数据的一个接口。它们都是以数组的语法处理二进制数据，所以统称为二进制数组。这个接口与 WebGL 有关。所谓 WebGL，就是指浏览器与显卡之间的通信接口，为了满足 JavaScript 与显卡之间大量的、实时的数据交换，它们之间的数据通信必须是二进制的，而不能是传统的文本格式。
-ArrayBuffer对象作为内存区域，可以存放多种类型的数据。同一段内存，不同数据有不同的解读方式，这就叫做“视图”（view），TypedArray视图用来读写简单类型的二进制数据，DataView视图用来读写复杂类型的二进制数据。
+ArrayBuffer对象作为内存区域，可以存放多种类型的数据。同一段内存，不同数据对应不同的解读方式。解读方式叫做“视图”（view），TypedArray视图用来读写简单类型的二进制数据，DataView视图用来读写复杂类型的二进制数据。
+
+![图片](./images/17.1.png)
 
 ###ArrayBuffer
-ArrayBuffer对象代表储存二进制数据的一段内存，它不能直接读写，只能通过视图（TypedArray视图和DataView视图)来读写，视图的作用是以指定格式解读二进制数据。
+ArrayBuffer对象代表储存二进制数据的一段内存，它不能直接读写，只能通过视图（TypedArray视图和DataView视图)来读写，视图部署了数组接口，所以可以用数组的方法操作内存。
 ```
 const buf = new ArrayBuffer(32);
 ```
