--- a/开发环境/1.Node.js/3.fs模块.md
+++ b/开发环境/1.Node.js/3.fs模块.md
@@ -3,12 +3,14 @@ fs模块
 fs模块提供对本地文件读和写的能力。
 ``fs.stat``  获取文件或目录信息
 ``fs.rename`` 重命名 
-``fs.mkdir`` 创建目录
-``fs.readdir`` 读取目录
-``fs.rmdir``  删除目录 
+
+``fs.mkdir`` 创建文件夹
+``fs.readdir`` 读取文件夹
+``fs.rmdir``  删除文件夹 
+
 ``fs.writeFile``  写入文件(文件不存在就创建) 
 ``fs.readFile`` 读取文件 
- 
+``fs.unlink()`` 删除文件
  
 
 
@@ -59,5 +61,21 @@ fs.writeFileSync(fileName, str, 'utf-8');
 ```
 
 ###stat()
-stat方法用于获取文件或目录的详细信息
- 
+stat方法用于获取文件或目录的详细信息。
+```
+let fs = require('fs');
+
+fs.stat('./text.txt',(err,data)=>{
+    if(err){
+        console.log(err)
+    }else{
+        console.log(data)
+    }
+})
+```
+data对象内包括文件或文件及的相关信息，可以通过：
+```
+data.isFile()
+data.isDirectory()
+```
+判断是文件还是文件夹。
