--- a/开发环境/1.Node.js/5.Stream接口.md
+++ b/开发环境/1.Node.js/5.Stream接口.md
@@ -46,3 +46,17 @@ Stream 接口分成三类:
 1.可读数据流接口，使得数据流可读。
 2.可写数据流接口，使得数据流可写。
 3.双向数据流接口，使得数据流可读写，比如Node的tcp sockets、zlib、crypto都部署了这个接口。
+
+**pipe()**
+pipe方法是自动传送数据的机制，就像管道一样。从“可读数据流”读出所有数据，流动到“可写数据流”。
+```
+var fs = require('fs');
+var readableStream = fs.createReadStream('file1.txt');
+var writableStream = fs.createWriteStream('file2.txt');
+
+readableStream.pipe(writableStream);
+```
+pipe方法返回目的地的数据流，因此可以使用链式写法：
+```
+a.pipe(b).pipe(c).pipe(d)
+```
