--- a/开发环境/1.Node.js/9.Events模块.md
+++ b/开发环境/1.Node.js/9.Events模块.md
@@ -1,2 +1,36 @@
 Events模块
 ===
+events 模块只提供了一个对象: events.EventEmitter。
+
+###Event Emitter接口
+EventEmitter 是一个接口，部署在对象上，包括 fs、net、 http 在内的，只要是支持事件响应的核心模块都是 events.EventEmitter 的实例。
+```
+// 引入 events 模块
+var events = require('events');
+// 创建 eventEmitter 对象
+var eventEmitter = new events.EventEmitter();
+```
+**on()**
+EventEmitter 的每个事件由一个事件名和回调函数组成：
+```
+// 添加监听
+eventEmitter.on('myEvent', function(arg) { 
+    console.log(arg); 
+}); 
+// 设定触发时机
+setTimeout(function() { 
+    eventEmitter.emit('myEvent','arg'); 
+}, 1000); 
+```
+eventEmitter对象需要注册对于事件的监听和处理（回调函数），之后设定触发的条件。
+EventEmitter可以有多个事件监听器来监听事件，这些监听器会按照注册顺序依次调用。
+
+**once()**
+为指定事件注册一个单次监听器，即 监听器最多只会触发一次，触发后立刻解除该监听器。
+
+**removeListener()**
+移除指定事件的某个监听器，监听器必须是该事件已经注册过的监听器。
+
+
+
+
