--- a/开发环境/1.Node.js/2.CommonJS.md
+++ b/开发环境/1.Node.js/2.CommonJS.md
@@ -35,5 +35,5 @@ var example = require('./example.js');
 1.如果参数字符串以``/``开头，则表示加载的是一个位于绝对路径的模块文件。
 2.如果参数字符串以``./``开头，则表示加载的是一个位于相对路径的模块文件。
 3.如果参数字符串不以``./``或``/``开头，则表示加载的是一个node提供的核心模块，或者一个位于node_modules目录的已安装模块。
-
-
+node_modules是NodeJS定义的目录，专门用于存放模块。
+![](./images/2.1.png)
