--- a/开发环境/2.npm/3.执行脚本.md
+++ b/开发环境/2.npm/3.执行脚本.md
@@ -1,9 +1,9 @@
 执行脚本
 ===================
 npm不仅可以用于模块管理，还可以用于执行脚本。package.json文件有一个scripts字段，可以用于指定脚本命令，供npm直接调用。
-
-      "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-      }
-
-`npm run test`就会执行test中的命令内容。
+```
+"scripts": {
+  "test": "node test.js"
+}
+```
+`npm run test`就会执行node test.js。
