--- a/Python/1.认识python.md
+++ b/Python/1.认识python.md
@@ -1,2 +1,34 @@
 认识python
 ===
+**命令行模式和交互模式**
+与nodejs一样，python也是命令行模式和Python交互模式。
+命令行模式，它的提示符类似`C:\>`，在命令行模式下敲命令python，就进入到Python交互模式，它的提示符是`>>>`,交互模式下输入exit()并回车，就退回到命令行模式。
+
+###变量
+注意，python的变量是不需要声明的，可以直接赋值使用的。
+```
+a = 3
+```
+这个过程干了以下三件事：
+1.创建name a
+2.创建object 3
+3.将name 指向 object
+
+
+###输入和输出
+**输出**
+就像是js中的`console.log()`一样，用`print()`就可以输出指定的内容。
+
+**输入**
+python的输入使用`input()`，不同于input元素对象，`<input>`输入的内容会保存在value属性，而使用`input()`输入的值需要使用一个变量进行保存，所以：
+```
+name = input('your name: ')
+print('hello,', name)
+```
+交互模式下的输入就会保存在name变量，在输入完成后（回车键），就会输出保存的值。注意，`input()`的返回值是str类型。
+
+###关键字
+`
+'False', 'None', 'True', '__peg_parser__', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield'
+`
+
