--- a/Python/3.运算符.md
+++ b/Python/3.运算符.md
@@ -12,17 +12,16 @@ print(11%3)
 print(11%3)
 #-1
 
+a = 1
+#赋值
 a,b = 10,20
 #分别赋值
 a,b = b,a
-#交换a,b的值，类似于js结构赋值
-
-a = 1
-#赋值
+#交换a,b的值，类似于js解构赋值
 [] == []
 #True 只比较value
 [] is []
-#False 比较id和value
+#False 比较id和value（id为存放[]的内存地址）
 
 not True
 # False 逻辑取反，类似js中的!
