--- a/Python/2.数据类型.md
+++ b/Python/2.数据类型.md
@@ -22,7 +22,7 @@ Python可以处理任意大小的整数，包括正负整数和0
 list是一种有序的集合，可以随时添加和删除其中的元素，类似于js中的array。
 
 **元组tuple**
-另一种有序列表叫元组：tuple。tuple和list非常类似，但是tuple一旦初始化就不能修改，使用的`()`。
+另一种有序列表叫元组：tuple。tuple和list非常类似，但是tuple一旦初始化就不能修改内部各个值的指向关系。
 ```
 number = (1, 2, 3)
 ```
@@ -36,3 +36,8 @@ number = (1, 2, 3)
 **float()**
 **str()**
 
+###类型
+可变类型：`list、dict、set`
+不可变类型:`int、float、bool、tuple`
+
+在Python中，数值（整型，浮点型），布尔型，字符串，元组属于值类型，本身不允许被修改（不可变类型），数值的修改实际上是让变量指向了一个新的对象。
