--- a/Python/4.语句.md
+++ b/Python/4.语句.md
@@ -1,2 +1,56 @@
 语句
 ===
+在python中，没有小括号和花括号来表示语句块，语句块的开始是使用`:`来表示：
+```
+age = 3
+if age >= 18:
+    print('adult')
+# elif是else if的缩写
+elif age >= 6:
+    print('teenager')
+else:
+    print('kid')
+```
+语句的结束也没有`;`，完全根据是否缩进来结束语句：
+```
+sum1 = 0
+for x in [1, 2, 3]:
+    sum1 = sum1 + x
+print(sum1)
+# 6
+
+sum2 = 0
+for x in [1, 2, 3]:
+    sum2 = sum2 + x
+    print(sum2)
+# 1
+# 3
+# 6
+```
+###循环
+**range(start,stop,step)**
+内置函数range()可以生成一个整数序列,参数`start`可以省略，默认为0，参数`step`可以省略，默认为1。
+```
+print(list(range(2,10,2)))
+#[2,4,6,8]
+```
+
+Python的循环有两种，一种是for...in循环，一种是while循环：
+**for...in**
+for...in循环依次把list或tuple中的每个元素值迭代出来。(在js中则是for...of)
+**while**
+while循环，只要条件满足，就不断循环，条件不满足时退出循环。
+在循环中，break语句可以结束循环，continue语句，可以跳过本轮循环，开始下一次循环:
+```
+n = 0
+while n < 10:
+    n = n + 1
+    if n % 2 == 0:
+        continue
+    if n > 5:
+        break
+    print(n)
+# 1
+# 3
+# 5
+```
