--- a/HTML/28.html5-离线缓存.md
+++ b/HTML/28.html5-离线缓存.md
@@ -1,5 +1,6 @@
- 离线缓存
+ 离线缓存(已废弃)
 ===================
+**该特性已经从 Web 标准中删除**
 由于h5在离线的状态下无法使用，同时Web App中一部分资源并不是经常改变，并不需要每次都向服务器发出请求，出于这些原因，HTML5提出的一个新的特性：离线存储。
 
 **原理**
