--- a/Python/11.IO.md
+++ b/Python/11.IO.md
@@ -4,7 +4,7 @@ IO
 在磁盘上读写文件的功能都是由操作系统提供的，程序通过操作系统提供的接口来读写文件。
 **open()**
 内置函数`open(fileName, mode)` 返回一个文件对象(file object)，fileName是包含文件名的路径，mode是表明使用方式的字符。
-对于文本文件，一般用'r'(默认值)或者'w'表明读写，'a'表明追加内容写入。二进制文件，比如图片、视频等等，用'rb'或'wb'模式。
+对于文本文件，使用'r'(默认值)或者'w'表明读和写，'a'表明追加内容写入。二进制文件，比如图片、视频等等，用'rb'或'wb'模式。
 
 **文件对象**(file object)
 处理文件对象时，最好使用`with`关键字包裹：
@@ -12,12 +12,16 @@ IO
 with open('workfile') as file:
     ...
 ```
-文件使用完毕后必须关闭，with语句可以自动调用close()方法。
+则是因为文件使用完毕后必须关闭，with语句可以自动调用close()方法。
 例如复制一张图片：
 ```
 with open('example.jpg','rb') as sourceFile:
     with open('copy.jpg','wb') as targetFile:
         targetFile.write(sourceFile.read())
 ```
+
+
+
+
 
 
