--- a/CSS/9.盒模型.md
+++ b/CSS/9.盒模型.md
@@ -103,8 +103,8 @@ stretch（默认值）：如果项目未设置高度或设为auto，将占满整
         width: 300px;
         height: 300px;
         display: flex;//flex布局
-        justify-content: center;//使子项目水平居中
-        align-items: center;//使子项目垂直居中
+        justify-content: center;//使子项目两端对齐
+        align-items: center;//使子项目上下对齐
     }
     .content {
         background-color: #F00;
@@ -115,19 +115,19 @@ stretch（默认值）：如果项目未设置高度或设为auto，将占满整
 2.margin:auto法
 
     .box{
-          width: 300px;
-          height: 300px;
-          position: relative;
-          border: 1px solid #465468;
-     }
-     .content{
-          position: absolute;
-          margin: auto;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-     }
+        width: 300px;
+        height: 300px;
+        position: relative;
+        border: 1px solid #465468;
+    }
+    .content{
+        position: absolute;
+        margin: auto;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 
 ###容器内项目的属性
 
