--- a/开发环境/5.Git/3.区域和库.md
+++ b/开发环境/5.Git/3.区域和库.md
@@ -1,5 +1,11 @@
-工作区和版本库
+区域和库
 ===================
+![](../相关文件/5.3.0.png)
+Workspace：工作区
+Index / Stage：暂存区
+Repository：仓库区（或本地仓库）
+Remote：远程仓库
+
 ###工作区
 就是在电脑里能看到的目录，放置文件的地方。
 ###版本库
