--- a/开发环境/5.Git/1.理解Git.md
+++ b/开发环境/5.Git/1.理解Git.md
@@ -2,9 +2,11 @@
 ===================
 Git是目前最流行的分布式版本控制系统。
 
-**集中式vs分布式**
-集中式版本控制系统，版本库是集中存放在中央服务器的，需要文件的时候，要先从中央服务器取得最新版本的文件，编辑完成后，再把自己的文件推送给中央服务器。因此，必须联网才能工作。
-分布式版本控制系统根本没有“中央服务器”，每个人的电脑上都是一个完整的版本库，多人协作时，只需把各自的修改推送给对方，就可以互相看到对方的修改了。分布式版本控制系统通常也有一台充当“中央服务器”的电脑，但这个服务器的作用仅仅是用来方便“交换”大家的修改。
+**集中式**
+集中式的版本库是集中存放在中央服务器的，文件的更新和提交，都要先连接中央服务器。所有人都是单独连接到中央服务器的。因此，必须联网才能工作。
+**分布式**
+分布式的版本库，储存在每个人的电脑上，多人协作时，只需把各自的修改推送给对方，就可以互相看到对方的修改了。
+分布式版本控制系统通常也有一台充当“中央服务器”的电脑，作用是用来方便“交换”大家的修改。
 
 **下载安装**
 在[官网][1]可以选择对应系统的Git下载。
@@ -12,16 +14,26 @@ Git是目前最流行的分布式版本控制系统。
 
     $ git config --global user.name "myname"
     $ git config --global user.email "myE-mail"
-这样就能标明这是我的Git，是我在进行操作。用于分布式版本控制系统内进行识别。
+这样就能标明是我在进行git操作，用于分布式版本控制系统内进行识别。
 
-###创建版本库
-版本库就是一个文件夹目录，这个目录里面的所有文件都可以被Git管理起来，每个文件改变，Git都能跟踪，以便任何时刻都可以追踪历史，或者在将来某个时刻可以“还原”。
+###配置
+Git的设置文件为.gitconfig，它可以在用户主目录下（全局配置），也可以在项目目录下（项目配置）。
+```
+# 显示当前的Git配置
+$ git config --list
+
+# 编辑Git配置文件
+$ git config -e [--global]
+```
+
+###创建本地库
+本地库就是一个文件夹目录，这个目录里面的所有文件都可以被Git管理起来，每个文件改变，Git都能跟踪，以便任何时刻都可以追踪历史，或者在将来某个时刻可以“还原”。
 创建位置可以自己选择，这里我选择就建立在C盘
 
     $ cd /c
     $ mkdir gittest
     $ cd gittest
-创建完成后，通过`git init`命令进行初始化，把这个目录变成Git可以管理的仓库：
+创建完成后，通过`git init`命令进行初始化，把这个目录变成Git可以管理的本地库：
 
     $ git init
 
